--- a/EsGiorno02/index.html
+++ b/EsGiorno02/index.html
@@ -5,11 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>CSS</title>
 </head>
 
 <body>
+    <div class="box">
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Cart</li>
+            <li>Product</li>
+        </ul>
+    </div>
 
+    <div class="box2">
+        <ul>
+            <li>Home <i class="fa-solid fa-house"></i> </li>
+            <li>About <i class="fa-solid fa-eject"></i></li>
+            <li>Cart <i class="fa-solid fa-cart-shopping"></i></li>
+            <li>Product <i class="fa-solid fa-shop"></i></li>
+        </ul>
+    </div>
 </body>
 
 </html>
