--- a/EsGiorno03/index.html
+++ b/EsGiorno03/index.html
@@ -31,8 +31,16 @@
             </ul>
 
 
+
+
         </nav>
     </header>
+    <div class="image">
+        <img src="https://media.istockphoto.com/id/1406546799/it/foto/profilo-cucciolo-di-cane-che-va-in-vacanza-sopra-una-valigia-gialla-isolato-su-sfondo-viola.jpg?s=2048x2048&w=is&k=20&c=jCG1DKdTwsEZ-XcXuOL4wD9AO91i3D0YwUOovLjnJGc="
+            alt="Cane con gli occhiali da sole">
+        <img src="https://media.istockphoto.com/id/1406546799/it/foto/profilo-cucciolo-di-cane-che-va-in-vacanza-sopra-una-valigia-gialla-isolato-su-sfondo-viola.jpg?s=2048x2048&w=is&k=20&c=jCG1DKdTwsEZ-XcXuOL4wD9AO91i3D0YwUOovLjnJGc="
+            alt="Cane con gli occhiali da sole">
+    </div>
 </body>
 
 </html>
